# society

./: LICENSE  README.md  pyproject.toml
src/society/: __init__.py  app.py  cli.py  commands.py  config.py  llm.py  models.py  session.py  society.py
tests/: test_config.py  test_models.py  test_session.py  test_society.py
