[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "society"
version = "0.1.0"
description = "A terminal-native multi-agent system where persistent AI personas collaborate, debate, and evolve"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "textual>=1.0.0",
    "anthropic>=0.40.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
society = "society.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["src/society"]

[tool.hatch.build.targets.sdist]
include = ["src/society"]
